plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'

	id "io.freefair.lombok" version "8.12.1"
	id "org.sonarqube" version "6.0.1.5171"
}

group = 'com.book_tracker'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'net.datafaker:datafaker:2.4.2'
	implementation 'io.github.wimdeblauwe:error-handling-spring-boot-starter:4.5.0'

	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.postgresql:postgresql'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.mockito:mockito-core:5.0.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.0.0'

	testImplementation 'org.testcontainers:postgresql:1.19.3'
	testImplementation 'org.testcontainers:junit-jupiter:1.19.3'

	testRuntimeOnly 'org.mockito:mockito-inline:5.0.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	jvmArgs("-XX:+EnableDynamicAgentLoading")
	useJUnitPlatform()
}